--- a/i18n/zh_CN/LC_MESSAGES/ok.po
+++ b/i18n/zh_CN/LC_MESSAGES/ok.po
@@ -566,3 +566,60 @@ msgstr ""
 
 msgid "魔灵支援"
 msgstr ""
+
+msgid "【30火&60火】-密函线索"
+msgstr ""
+
+msgid "【50mod】-中速-水母-主控可调"
+msgstr ""
+
+msgid "【55&80mod】-磐石水母-主控可调"
+msgstr ""
+
+msgid "【60mod&驱离-密函】-水母-主控可调（不要带黎瑟协战）-超时建议90s"
+msgstr ""
+
+msgid "【60角色经验】-磐石水母"
+msgstr ""
+
+msgid "【65mod】-黎瑟主控（或者水母主控带个黎瑟助战）"
+msgstr ""
+
+msgid "【70jjb】-中低速-水母-主控可调"
+msgstr ""
+
+msgid "【密函-拆解】-无巧手版-280范围水母"
+msgstr ""
+
+msgid "【密函-拆解】-需巧手-280范围水母"
+msgstr ""
+
+msgid "【无飞枪80红豆（有巧手可后台）】-磐石黎瑟-使用前看文件夹内说明-超时建议5~10s"
+msgstr ""
+
+msgid "【武器材料60&70】-磐石水母-超时建议20s"
+msgstr ""
+
+msgid "【武器经验50】-磐石水母-超时建议20s"
+msgstr ""
+
+msgid "【武器经验80】-磐石水母-含配置参考-超时建议20s"
+msgstr ""
+
+msgid "启动解锁机关"
+msgstr ""
+
+msgid "委托手册指定轮次"
+msgstr ""
+
+msgid "自动解锁轮盘"
+msgstr ""
+
+msgid "自动解锁迷宫"
+msgstr ""
+
+msgid "自动识别并进行迷宫解锁"
+msgstr ""
+
+msgid "范例: 3,5,8"
+msgstr ""
